<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="3dp"
    android:background="@color/colorPrimary"> <!-- Puedes cambiar el color de fondo -->

    <TextView
        android:id="@+id/tv_headerFecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/fecha"
        android:textStyle="bold"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/tv_headerEntrada"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/entrada"
        android:textStyle="bold"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/tv_headerSalida"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/salida"
        android:textStyle="bold"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/tv_headerHorasExtras"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/horas_extras_headers"
        android:textStyle="bold"
        android:textColor="@color/white"/>
</LinearLayout>
