<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:src="@drawable/mega"
        android:layout_gravity="center"/>

    <!-- Nota Venta -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <!-- TEXTO -->
        <TextView
            android:text="@string/Txt_D_Notavta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_condensed_bold"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/D_Notavta"

            android:text="@string/D_Cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="@font/opensans_condensed_regular"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <!-- LINEA -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#000"/>

    <!-- Cliente -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <!-- TEXTO -->
        <TextView
            android:text="@string/Txt_D_Cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_condensed_bold"
            android:textSize="20sp"/>

        <!-- DATO -->
        <TextView
            android:id="@+id/D_Cliente"
            android:text="@string/D_Cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_condensed_regular"
            android:textSize="18sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <!-- LINEA -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#000"/>

    <!-- Codigo -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <!-- TEXTO -->
        <TextView
            android:text="@string/Txt_D_Codigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_condensed_bold"
            android:textSize="20sp"/>

        <!-- DATO -->
        <TextView
            android:id="@+id/D_Codigo"
            android:text="@string/D_Codigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_condensed_regular"
            android:textSize="18sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <!-- LINEA -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#000"/>

    <!-- Cantidad -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <!-- TEXTO -->
        <TextView
            android:text="@string/Txt_D_Cantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_condensed_bold"
            android:textSize="20sp"/>
        <!-- DATO -->
        <TextView
            android:id="@+id/D_Cantidad"
            android:text="@string/D_Cantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_condensed_regular"
            android:textSize="18sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <!-- LINEA -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#000"/>
    <!-- Parcial -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <!-- TEXTO -->
        <TextView
            android:text="@string/Txt_D_Parcial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_condensed_bold"
            android:textSize="20sp"/>
        <!-- DATO -->
        <TextView
            android:id="@+id/D_Parcial"
            android:text="@string/D_Cantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_condensed_regular"
            android:textSize="18sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <!-- LINEA -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#000"/>
    <!-- Cantidad -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <!-- TEXTO -->
        <TextView
            android:text="@string/Txt_D_Restante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_condensed_bold"
            android:textSize="20sp"/>
        <!-- DATO -->
        <TextView
            android:id="@+id/D_Restante"
            android:text="@string/D_Cantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_condensed_regular"
            android:textSize="18sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <!-- LINEA -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#000"/>
    <!-- Etapa -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <!-- TEXTO -->
        <TextView
            android:text="@string/Txt_D_Etapa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_condensed_bold"
            android:textSize="20sp"/>
        <!-- DATO -->
        <TextView
            android:id="@+id/D_Etapa"
            android:text="@string/D_Etapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_condensed_regular"
            android:textSize="18sp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>
    <!-- LINEA -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#000"/>
    <!-- Nota -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <!-- TEXTO -->
        <TextView
            android:text="@string/Txt_D_Nota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_condensed_bold"
            android:textSize="20sp"/>

        <!-- DATO -->
        <TextView
            android:id="@+id/D_Nota"
            android:text="@string/D_Nota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_condensed_regular"
            android:textSize="18sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <!-- LINEA -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#000"/>
    <!-- Tiempo Registro -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <!-- TEXTO -->
        <TextView
            android:text="@string/Txt_D_Inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_condensed_bold"
            android:textSize="20sp"/>

        <!-- DATO -->
        <TextView
            android:id="@+id/D_Inicio"
            android:text="@string/D_Inicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_condensed_regular"
            android:textSize="18sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <!-- LINEA -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#000"/>
    <!-- Tiempo Actualizacion -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <!-- TEXTO -->
        <TextView
            android:text="@string/Txt_D_Termino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_condensed_bold"
            android:textSize="20sp"/>

        <!-- DATO -->
        <TextView
            android:id="@+id/D_Termino"
            android:text="@string/D_Termino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_condensed_regular"
            android:textSize="18sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <!-- LINEA -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#000"/>

</LinearLayout>