<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context=".Registro_usuario.Registro">

    <TextView
        android:id="@+id/TxtBienvenidos"
        android:text="@string/TxtBienvenidos"
        android:textSize="25sp"
        android:fontFamily="@font/opensans_condensed_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/TxtMesaje"
        android:text="@string/TxtMesaje"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/opensans_condensed_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!--Contraseña usuario -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/EtPasswordU"
            android:hint="@string/EtPasswordU"
            android:fontFamily="@font/opensans_condensed_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    </com.google.android.material.textfield.TextInputLayout>

    <!--Contraseña confirmar -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/EtPassword"
            android:hint="@string/EtPassword1"
            android:fontFamily="@font/opensans_condensed_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Btnregistrar"
        android:text="@string/Btnregistrar"
        android:textColor="#fff"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/opensans_condensed_regular"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>