<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="10dp">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="100dp"
        android:layout_gravity="center"
        android:layout_height="100dp"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_fileName="sort.json"
        app:lottie_autoPlay="true"/>
    <!-- NUEVOS-->
    <Button
        android:id="@+id/Btn_nuevos"
        android:text="@string/Btn_nuevos"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/opensans_condensed_bold"
        android:textColor="#fff"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <!-- PASADOS-->
    <Button
        android:id="@+id/Btn_Pasados"
        android:text="@string/Btn_Pasados"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/opensans_condensed_bold"
        android:textColor="#fff"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <!-- ASC-->
    <Button
        android:id="@+id/Btn_Asc"
        android:text="@string/Btn_Asc"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/opensans_condensed_bold"
        android:textColor="#fff"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <!-- DESC-->
    <Button
        android:id="@+id/Btn_Desc"
        android:text="@string/Btn_Desc"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/opensans_condensed_bold"
        android:textColor="#fff"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>