<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardElevation="1dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="3dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_item_password"
            android:layout_width="95dp"
            android:layout_height="89dp"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:src="@drawable/viento" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_toStartOf="@id/Ib_mas_opciones"
            android:layout_toEndOf="@+id/img_item_password"
            android:layout_marginStart="2dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/Item_notavta"
                    android:text="@string/Item_notavta"
                    android:fontFamily="@font/opensans_condensed_bold"
                    android:textSize="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="              "/>
                <TextView
                    android:id="@+id/Item_cliente"
                    android:text="@string/Item_cliente"
                    android:fontFamily="@font/opensans_condensed_bold"
                    android:textSize="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Item_codigo"
                    android:text="@string/Item_codigo"
                    android:fontFamily="@font/opensans_condensed_bold"
                    android:textSize="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_condensed_bold"
                    android:textSize="18dp"
                    android:text="Ptes: "/>
                <TextView
                    android:id="@+id/Item_restante"
                    android:text="@string/Item_restante"
                    android:fontFamily="@font/opensans_condensed_bold"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>

            </LinearLayout>
            <TextView
                android:id="@+id/Item_cantidad"
                android:text="@string/Item_cantidad"
                android:fontFamily="@font/opensans_condensed_regular"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/Item_parcial"
                android:text="@string/Item_parcial"
                android:fontFamily="@font/opensans_condensed_regular"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/Item_etapa"
                android:text="@string/Item_etapa"
                android:fontFamily="@font/opensans_condensed_regular"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/Item_nota"
                android:text="@string/Item_nota"
                android:fontFamily="@font/opensans_condensed_bold"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>
            <TextView
                android:id="@+id/Item_fecha"
                android:text="@string/Item_fecha"
                android:fontFamily="@font/opensans_condensed_bold"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/Ib_mas_opciones"
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/icono_mas_opciones"
            android:background="@null"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"/>


    </RelativeLayout>
    <ImageView
        android:id="@+id/imgMarcaAgua"
        android:layout_width="wrap_content"
        android:layout_height="95dp"
        android:src="@drawable/mega"
        android:scaleType="fitEnd"
        android:alpha="0.3"
        android:visibility="visible"/>

</androidx.cardview.widget.CardView>